--- a/app/newsArticle.html
+++ b/app/newsArticle.html
@@ -167,222 +167,71 @@
          </div>
       </div>
 
-      <div class="portfolio-section">
-         <div class="container">
-            <div class="portfolio-sort">
-               <ul class="sort-by">
-                  <li class="active">
-                     <a href="#">Product Design</a>
-                  </li>
-                  <li>
-                     <a href="#">Store & Exhibition</a>
-                  </li>
-                  <li>
-                     <a href="#">CAD Design (3D)</a>
-                  </li>
-                  <li>
-                     <a href="#">App Design</a>
-                  </li>
-                  <li>
-                     <a href="#">Branding & Logo</a>
-                  </li>
-                  <li>
-                     <a href="#">VIEW ALL</a>
-                  </li>
-               </ul>
-            </div>
-            <div class="portfolio-tiles">
-               <div class="tile">
-                  <div class="tile-inner tile1">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile2">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile3">
-                     <div class="tile-info ">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile4">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile1">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile2">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile3">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile4">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile1">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile2">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile3">
-                     <div class="tile-info ">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile4">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile1">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile2">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile3">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile4">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="show-more">
-               <a href="#">SHOW ME MORE!</a>
-            </div>
+      <section class="project-banner container">
+         <div class="project-banner-inner ">
          </div>
-      </div>
+      </section>
+      <section class="split-section container">
+         <div class="row">
+            <div class="col-12 col-md-12 col-lg-6 left-column">
+               <h2 class="inner-h2">COLOMBO JAZZ FESTIVAL, 2014</h2>
+               <h1 class="inner-h1">Celebrating good music, & great food!</h1>
+               <p class="tagline">
+                  Aliquam dictum a purus non volutpat. Vivamus a
+                  <br>turpis sapien.
+               </p>
+               <h3 class="inner-h3">Donec pharetra sodales</h3>
 
-      <div class="innovation-section">
-         <div class="container">
-            <h2>Innovating tomorrow’s</h2>
-            <h1>NEXT BIG THING!</h1>
-            <h4>~ Making ideas a reality</h4>
-         </div>
-         <div class="work-flow-section">
-            <img src="images/work-flow.png" alt="work-flow-of-cds">
-         </div>
-         <div class="work-flow-section mobile">
-            <img src="images/work-flow-mob.png" alt="work-flow-of-cds">
-         </div>
-         <div class="container">
-            <div class="lets-create-section">
-               <h2 class="">Let’s make something
-                        <span>great</span> together</h2>
-               <h4>~ We’re ready for the challenge ~</h4>
+               <p class="article-content">
+                  Donec pharetra sodales mauris, consequat euismod quam consequat at. Aliquam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan. Vivamus viverra mi et nisi faucibus tincidunt.
+               </p>
+
+               <img class="article-images" src="images/article1.jpg" alt="article images">
+
+               <h3 class="inner-h3">Donec pharetra sodales</h3>
+
+               <p class="article-content">
+                  Donec pharetra sodales mauris, consequat euismod quam consequat at. Aliquam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan. Vivamus viverra mi et nisi faucibus tincidunt.Donec
+                  pharetra sodales mauris, consequat euismod quam consequat at. Aliquam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan. Vivamus viverra mi et nisi faucibus
+                  tincidunt.
+               </p>
             </div>
 
-            <div class="row info-cols">
-               <div class="col col-12 col-md-12 col-lg-4">
-                  <div class="col-image">
-                     <img src="images/shake-hands.png">
-                  </div>
-                  <div class="col-info">
-                     <h2>Shake hands!</h2>
-                     <p>
-                        Colombo Design Studio 5/1 Geethanjalee Place Colombo, Sri Lanka 00300
-                     </p>
-                  </div>
-               </div>
-               <div class="col col-12 col-md-12 col-lg-4">
-                  <div class="col-image">
-                     <img src="images/rocket.png">
-                  </div>
-                  <div class="col-info">
-                     <h2>Kickstart your project!</h2>
-                     <p>
-                        Whether it’s a product, brand or idea, fill out our short online form here and get a headstart!
-                     </p>
-                  </div>
-               </div>
-               <div class="col col-12 col-md-12 col-lg-4">
-                  <div class="col-image">
-                     <img src="images/talent.png">
-                  </div>
-                  <div class="col-info">
-                     <h2>New talent & opportunities!</h2>
-                     <p>
-                        +94 11 4 544631 makeithappen@colombodesignstudio.com
-                     </p>
-                  </div>
-               </div>
+            <div class="col-12 col-md-12 col-lg-6 right-colomn">
+               <p class="article-content">
+                  euismod quam consequat at. Aliquam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan.
+               </p>
+
+               <img class="article-images" src="images/article2.jpg" alt="article images">
+
+               <p class="article-content">
+                  Donec pharetra sodales mauris, consequat euismod quam consequat at. Aliquam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan. Vivamus viverra mi et nisi faucibus tincidunt.Donec
+                  pharetra sodales mauris, consequat euismod quam consequat at. Aliquam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan. Vivamus viverra mi et nisi faucibus
+                  tincidunt.
+               </p>
+               <p class="article-content">
+                  quam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan. Vivamus viverra mi et nisi faucibus tincidunt.quam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam
+                  feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan. Vivamus viverra mi et nisi faucibus tincidunt.
+               </p>
+
+               <h3 class="inner-h3">Donec pharetra sodales</h3>
+
+               <p class="article-content">
+                  quam dictum a purus non volutpat. Vivamus a turpis sapien. Aliquam feugiat arcu consequat nisi vehicula, sit amet tincidunt risus accumsan. Vivamus viverra mi et nisi faucibus tincidunt.
+               </p>
+
+               <p class="article-content signature">
+                  by Lee Bazelgette, 23/05/20
+               </p>
             </div>
          </div>
-      </div>
+      </section>
+
+      <section class="separation-tag container">
+         <p>
+            The news and views on all the latest gossip with Colombo Design Studio
+         </p>
+      </section>
 
       <div class="clients-section">
          <div class="container">
@@ -448,13 +297,13 @@
             <div class="row footerr">
                <div class="col-12 col-md-12 col-lg-6">
                   <span>
-                      © 2017 Copyright Colombo Design Studio | Disclaimer
-                   </span>
+                     © 2017 Copyright Colombo Design Studio | Disclaimer
+                  </span>
                </div>
                <div class="col-12 col-md-12 col-lg-6">
                   <span class="right">
-                      A Colombo Design Studio website
-                   </span>
+                     A Colombo Design Studio website
+                  </span>
                </div>
             </div>
          </div>
