--- a/src/project.html
+++ b/src/project.html
@@ -167,222 +167,123 @@
          </div>
       </div>
 
-      <div class="portfolio-section">
-         <div class="container">
-            <div class="portfolio-sort">
-               <ul class="sort-by">
-                  <li class="active">
-                     <a href="#">Product Design</a>
-                  </li>
-                  <li>
-                     <a href="#">Store & Exhibition</a>
-                  </li>
-                  <li>
-                     <a href="#">CAD Design (3D)</a>
-                  </li>
-                  <li>
-                     <a href="#">App Design</a>
-                  </li>
-                  <li>
-                     <a href="#">Branding & Logo</a>
-                  </li>
-                  <li>
-                     <a href="#">VIEW ALL</a>
-                  </li>
-               </ul>
-            </div>
-            <div class="portfolio-tiles">
-               <div class="tile">
-                  <div class="tile-inner tile1">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile2">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile3">
-                     <div class="tile-info ">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile4">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile1">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile2">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile3">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile4">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile1">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile2">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile3">
-                     <div class="tile-info ">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile4">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile1">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile2">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile3">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tile">
-                  <div class="tile-inner tile4">
-                     <div class="tile-info">
-                        <h2>Project Name</h2>
-                        <p>Project Description</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="show-more">
-               <a href="#">SHOW ME MORE!</a>
+      <section class="project-header container">
+         <div class="project-header-inner">
+            <div class="text-content">
+               <h1 class="project-h1">
+                  Clover
+               </h1>
+               <h3 class="project-h3">
+                  <a href="#">
+                     Organize Your Life  <span>></span>
+                  </a>
+               </h3>
             </div>
          </div>
-      </div>
+      </section>
 
-      <div class="innovation-section">
-         <div class="container">
-            <h2>Innovating tomorrow’s</h2>
-            <h1>NEXT BIG THING!</h1>
-            <h4>~ Making ideas a reality</h4>
-         </div>
-         <div class="work-flow-section">
-            <img src="images/work-flow.png" alt="work-flow-of-cds">
-         </div>
-         <div class="work-flow-section mobile">
-            <img src="images/work-flow-mob.png" alt="work-flow-of-cds">
-         </div>
-         <div class="container">
-            <div class="lets-create-section">
-               <h2 class="">Let’s make something
-                        <span>great</span> together</h2>
-               <h4>~ We’re ready for the challenge ~</h4>
+      <section class="project-process container">
+         <div class="number-start">
+            <div class="number-wrapper">
+               1
             </div>
+         </div>
+         <div class="number-content">
+            <h2 class="project-process-heading">
+               Brief
+            </h2>
+            <p class="project-process-content">
+               Product design is what we do. We take an idea, some functionality, a brand identity and a lot of creativity and we bring it all together to make real products that have real purpose.
+            </p>
 
-            <div class="row info-cols">
-               <div class="col col-12 col-md-12 col-lg-4">
-                  <div class="col-image">
-                     <img src="images/shake-hands.png">
+            <img class="project-process-img" src="images/project1.jpg" alt="" />
+         </div>
+         <div class="number-start middle">
+            <div class="number-wrapper">
+               2
+            </div>
+         </div>
+
+         <div class="number-content">
+            <h2 class="project-process-heading">
+               Thoughts & Process
+            </h2>
+            <p class="project-process-content">
+               Product design is what we do. We take an idea, some functionality, a brand identity and a lot of creativity and we bring it all together to make real products that have real purpose.
+            </p>
+
+            <div class="project-grid">
+               <div class="row">
+                  <div class="col-12 col-md-12 col-lg-6 grid-left">
+                     <div class="prject-grid-main-img">
+
+                     </div>
                   </div>
-                  <div class="col-info">
-                     <h2>Shake hands!</h2>
-                     <p>
-                        Colombo Design Studio 5/1 Geethanjalee Place Colombo, Sri Lanka 00300
-                     </p>
-                  </div>
-               </div>
-               <div class="col col-12 col-md-12 col-lg-4">
-                  <div class="col-image">
-                     <img src="images/rocket.png">
-                  </div>
-                  <div class="col-info">
-                     <h2>Kickstart your project!</h2>
-                     <p>
-                        Whether it’s a product, brand or idea, fill out our short online form here and get a headstart!
-                     </p>
-                  </div>
-               </div>
-               <div class="col col-12 col-md-12 col-lg-4">
-                  <div class="col-image">
-                     <img src="images/talent.png">
-                  </div>
-                  <div class="col-info">
-                     <h2>New talent & opportunities!</h2>
-                     <p>
-                        +94 11 4 544631 makeithappen@colombodesignstudio.com
-                     </p>
+                  <div class="col-12 col-md-12 col-lg-6 grid-right">
+                     <div class="project-grid-small-img image-1">
+
+                     </div>
+
+                     <div class="project-grid-small-img image-2">
+
+                     </div>
                   </div>
                </div>
             </div>
          </div>
-      </div>
+
+         <div class="number-start middle">
+            <div class="number-wrapper">
+               3
+            </div>
+         </div>
+
+         <div class="number-content">
+            <h2 class="project-process-heading">
+               Sketch & Develop
+            </h2>
+            <p class="project-process-content">
+               Product design is what we do. We take an idea, some functionality, a brand identity and a lot of creativity and we bring it all together to make real products that have real purpose.
+            </p>
+
+            <img class="project-process-img" src="images/project2.jpg" alt="" />
+         </div>
+
+         <div class="number-start middle">
+            <div class="number-wrapper">
+               4
+            </div>
+         </div>
+
+         <div class="number-content">
+            <h2 class="project-process-heading">
+               Refine & Finalise
+            </h2>
+            <p class="project-process-content">
+               Product design is what we do. We take an idea, some functionality, a brand identity and a lot of creativity and we bring it all together to make real products that have real purpose.
+            </p>
+
+            <div class="project-grid">
+               <div class="row">
+                  <div class="col-12 col-md-12 col-lg-6 grid-left">
+                     <div class="prject-grid-main-img">
+
+                     </div>
+                  </div>
+                  <div class="col-12 col-md-12 col-lg-6 grid-right">
+                     <div class="project-grid-small-img image-1">
+
+                     </div>
+
+                     <div class="project-grid-small-img image-2">
+
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+
+      </section>
 
       <div class="clients-section">
          <div class="container">
@@ -448,13 +349,13 @@
             <div class="row footerr">
                <div class="col-12 col-md-12 col-lg-6">
                   <span>
-                      © 2017 Copyright Colombo Design Studio | Disclaimer
-                   </span>
+                     © 2017 Copyright Colombo Design Studio | Disclaimer
+                  </span>
                </div>
                <div class="col-12 col-md-12 col-lg-6">
                   <span class="right">
-                      A Colombo Design Studio website
-                   </span>
+                     A Colombo Design Studio website
+                  </span>
                </div>
             </div>
          </div>
