new-pages-added

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,9 @@
 <body>
    <div class="wrapper">
       <div class="header">
+          <div class="menu-icon mobile">
+              <span></span>
+          </div>
          <div class="container">
             <div class="row header-underlined">
                <div class="col col-12 col-md-12 col-lg-4 logo-wrapper">
@@ -460,6 +463,31 @@
          </div>
       </div>
 
+   </div>
+
+   <div class="mobile-nav">
+       <div class="mobile-nav-inner">
+           <div class="close-nav">
+               <span></span>
+           </div>
+            <ul class="cds-navigarion">
+                <li>
+                    <a href="#">home</a>
+                </li>
+                <li>
+                    <a href="#">our work</a>
+                </li>
+                <li>
+                    <a href="#">about us</a>
+                </li>
+                <li>
+                    <a href="#">news and views</a>
+                </li>
+                <li>
+                    <a href="#">products</a>
+                </li>
+                </ul>
+       </div>
    </div>
 
 
