--- a/src/index.html
+++ b/src/index.html
@@ -238,32 +238,173 @@
             </section>
 
 
-            <section class="portfolio-section">
+            <section class="portfolio-section web">
                 <div class="container">
-                    <!-- <div class="portfolio-sort">
-                        <ul class="sort-by">
-                            <li class="active">
-                                <a href="#">Product Design</a>
-                            </li>
-                            <li>
-                                <a href="#">Store & Exhibition</a>
-                            </li>
-                            <li>
-                                <a href="#">CAD Design (3D)</a>
-                            </li>
-                            <li>
-                                <a href="#">App Design</a>
-                            </li>
-                            <li>
-                                <a href="#">Branding & Logo</a>
-                            </li>
-                            <li>
-                                <a href="#">VIEW ALL</a>
-                            </li>
-                        </ul>
-                    </div> -->
                     <div class="portfolio-tiles">
                         <div class="tile">
+                            <div class="tile-inner tile1">
+                                <figure>
+                                    <img src="images/tile1.jpg" alt="">
+                                </figure>
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile2">
+                                <figure>
+                                    <img src="images/tile2.jpg" alt="">
+                                </figure>
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile3">
+                                <figure>
+                                    <img src="images/tile3.jpg" alt="">
+                                </figure>
+
+                                <div class="tile-info ">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile4">
+                                <figure>
+                                    <img src="images/tile4.jpg" alt="">
+                                </figure>
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile1">
+                                <figure>
+                                    <img src="images/tile2.jpg" alt="">
+                                </figure>
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile2">
+                                <figure>
+                                    <img src="images/tile3.jpg" alt="">
+                                </figure>
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile3">
+                                <figure>
+                                    <img src="images/tile4.jpg" alt="">
+                                </figure>
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile4">
+                                <figure>
+                                    <img src="images/tile1.jpg" alt="">
+                                </figure>
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile1">
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile2">
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile3">
+                                <div class="tile-info ">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile4">
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile1">
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile2">
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile3">
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <div class="tile-inner tile4">
+                                <div class="tile-info">
+                                    <h2>Project Name</h2>
+                                    <p>Project Description</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="show-more">
+                        <a href="#">SHOW ME MORE!</a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="portfolio-section mobile">
+                <div class="container">
+                    <div class="portfolio-tiles">
+                        <div class="tile" data-toggle="modal" data-target="#exampleModalLong">
                             <div class="tile-inner tile1">
                                 <figure>
                                     <img src="images/tile1.jpg" alt="">
@@ -562,7 +703,7 @@
     </div>
 
     <section class="mobile-popup">
-        
+
     </section>
 
     <!-- <div class="mobile-nav">
@@ -589,6 +730,33 @@
             </ul>
         </div>
     </div> -->
+
+    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+        aria-hidden="true">
+        <div class="modal-dialog portfolio-info-pop-up" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Project title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <figure>
+                        <img src="images/tile1.jpg" alt="">
+                    </figure>
+                    <h5>Client Name</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem quaerat molestiae blanditiis nemo eius voluptate, quasi ut facere, hic, provident voluptas ullam voluptatem quam dicta! Maiores vero officia velit earum!</p>
+
+                    <a href="">Read More...</a>
+                </div>
+                <!-- <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div> -->
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
